# fastapi-ecommerce

./: .flake8  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3c1c44942562_.py  8a2ad0bb9ca8_.py  ad450bdcf65a_.py  c9f904a182b8_.py
ecommerce/: config.py
ecommerce/auth/: jwt.py  router.py
ecommerce/cart/: models.py  router.py  services.py
ecommerce/orders/: models.py  router.py  schema.py  services.py
ecommerce/products/: models.py  router.py  schema.py  services.py  validator.py
ecommerce/user/: models.py  router.py  services.py  validator.py
