[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Tom Etzel <thomas.etzel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
passlib = {extras = ["argon2"], version = "^1.7.4"}
psycopg2-binary = "^2.9.3"
email-validator = "^1.1.3"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[tool.black]
line-length = 119
exclude = '''
(
    /(
         \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | dist
       | .+/migrations
    )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
